Fix tooltip, font sizes and add spacing to exp number in player stats

--- a/components/Stats/Stats.module.scss
+++ b/components/Stats/Stats.module.scss
@@ -21,25 +21,25 @@
 
 .username {
 	text-shadow: 3px 3px #00000022;
-	font-size: 24px;
+	font-size: 22px;
 	font-family: Minecraftia;
 	margin-bottom: 0;
 	display: inline-block;
 	vertical-align: middle;
-	line-height: 24px;
+	line-height: 22px;
 }
 
 .indicator {
 	display: inline-block;
 	width: 0.5em;
 	height: 0.5em;
-	margin-left: 1em;
+	// margin-left: 1em;
 	border-radius: 50%;
 	vertical-align: middle;
 }
 
 .info {
-	font-size: 1.25em;
+	font-size: 1em;
 }
 
 .bold {
